# cellularNN

./: .gitignore  SECURITY.md  VIDEO_CONSTRAINS.md  app.py  julia_install.py  pyproject.toml  security_considerations.txt  worker.py
JuliaWorker/: Manifest.toml  Project.toml
JuliaWorker/src/: Activation.jl  CuLinearConvolution.jl  CuODESolver.jl  JuliaWorker.jl  LinearConvolution.jl  ODESolver.jl  RedisQueueWatcher.jl  SAODESolver.jl  SocketLogger.jl
config/: config.py
frontend/: bun.lockb  index.html
frontend/src/assets/: settings.js
frontend/src/components/: ImageViewer.jsx  ImageViewer.module.css  MatrixVisualizer.jsx  MatrixVisualizer.module.css  ResponseNotification.jsx
frontend/src/pages/: Home.jsx  Home.module.css  PhotoCNN.jsx  STX.jsx  VideoCNN.jsx
handlers/: client_handler.py  video_transform.py
server/: async_server.py
test/: grtest_app.py
utils/: load_parameters.py  pkl_save.py  utils.py
